--- a/l0.html
+++ b/l0.html
@@ -6,15 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script>
-        let arr = [1,[2,3],[4,5,[6,7,8]],9];
-        var nmd
-function flatten(arr) {nmd=String(arr);
-    return nmd;
-    
-};
-flatten(arr);
-console.log(nmd);
-
+        var naxida=new Object();
+        naxida.name="naxida";
+        naxida.age=500
+        var zhongli={
+        name:"zhongli",
+        age:5000
+        };
+        var baer=function Person(name,age){
+        this.name="baer";
+        this.age=1000
+        };
     </script>
 </head>
 <body>
