--- a/l1.html
+++ b/l1.html
@@ -4,61 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>不想做作业捏</title>
-    <style>
-        .box {
-    width: 500px;
-    padding: 10px;
-    border: 1px solid black;
-}
-.box div {
-    width: 180px;
-    height: 50px;
-    background-color: grey;
-}
-.box{
-  display:flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-body { display:flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.box a{
-    text-decoration: none;
-}
-.box p{
- color: red;
-}
-.box div:hover{
-  background-color: yellow;
-}
-.box ul li:nth-child(1){
-    font-size: 20px;
-}
-.box ul li:nth-child(2){
-    font-size: 30px;
-}
-.box ul li:nth-child(3){
-    font-size: 40px;
-}
-
-    </style>
+    <title>Document</title>
+    <script>
+        var arr1=new Array();
+        var arr2=new Array();
+        function arr(arr1,arr2){
+            for(vari=0;i<=arr2.length;i++){
+            arr1[arr1.length]=arr2[i];
+            }
+            return arr1;
+        }
+    </script>
 </head>
-<body><div class="box">
-    <a href="#">我不想要a标签默认的下划线</a>
-    <p>我的字体颜色是红色</p>
-    <div>鼠标悬停在我的上面时，我的背景颜色变成黄色</div>
-    <ul>
-        <li>我的字体大小是20px</li>
-        <li>我的字体大小是30px</li>
-        <li>我的字体大小是40px</li>
-    </ul>
-    <p>我的字体颜色是红色</p>
-</div>
+<body>
     
 </body>
 </html>
